@@ -244,7 +244,10 @@ strdup __argz_count __argz_stringify __argz_next])
      else
        AC_MSG_CHECKING(for catalogs to be installed)
        NEW_LINGUAS=
-       for lang in ${LINGUAS=$ALL_LINGUAS}; do
+       if test "x$LINGUAS" = "x"; then
+           LINGUAS=$ALL_LINGUAS
+       fi
+       for lang in $LINGUAS; do
          case "$ALL_LINGUAS" in
           *$lang*) NEW_LINGUAS="$NEW_LINGUAS $lang" ;;
          esac
